--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -3,22 +3,17 @@
 {% check_is_gstaff group_id request.user as is_gstaff %}
 
 <div class="row overlay-head">
-
             {% if asset_obj.name %}
-
             {% else %}
-
             <a class="right close-reveal-modal reveal-modal-overlay" aria-label="Close">&#215;</a>
             {% endif %}
             <div class="small-12 colums" >
             {% if asset_obj.name %}
-                <h3 class="left">&nbsp;&nbsp;{{asset_obj.name}}</h3>
-
+                <p class="left">&nbsp;&nbsp;{{asset_obj.name}}</p>
             {% else %}
                 <h3 class="left overlay-title">&nbsp; Add a new asset</h3>
-                <button type="button" class="right orange-button save-asset">Save Asset</button>
+                <button type="button" class="right blue-white-button save-asset">Save Asset</button>
             {% endif %}
-
                 {% if asset_obj.name %}
 
                 {% else %}
@@ -42,13 +37,13 @@
             <div class="small-12 medium-6 large-6 columns">
                 <label> 
                     {% if asset_obj %}
-                       <i><p style="color: gray">{{asset_obj.content}} </p><i>
+                       <i><p style="color: gray">{{asset_obj.content}} </p></i>
                     {% else %}
                         Asset description
-                        <textarea rows="4" cols="2" class="large-6 columns" placeholder="Enter Description" id="asset-descid"></textarea>
-                    {% endif %}
                 </label>
-            </div>
+                        <textarea rows="4" cols="2" class="small-12 columns" placeholder="Enter Description" id="asset-descid"></textarea>
+                    {% endif %}
+                
         </div>
         {% comment %}
         <div class="row">
@@ -85,22 +80,41 @@
         
     <div class="asset-content-area"{% if not asset_obj %} style="display:none"{% endif %}>
        <!-- <h3>Add esources for this asset</h3>-->
-        <div class="row">
+        
            <!-- &nbsp;&nbsp;&nbsp;Add asset content-->
             {% if asset_obj.created_by == request.user.id or is_gstaff %}
             <div class="transcript_files">
                 <form class="dropzone" id ="docPost" enctype="multipart/form-data" method="post" action="{% url 'add_assetcontent' group_id %}" >
                     <input type="file" id="docFile" placeholder="" name=""/>
+                </form>
+            </div>
+   
+
                     <div class="name-desc-asset-cont-area" style="display: none">
-                        <input type="text" placeholder="Enter name" class="required" id = "asset_content_name" name="" />
-                        <textarea rows="4" cols="2" class="large-6 columns" placeholder="Enter Description" id="asset_content_desc"></textarea>
+                    <div class="row">
+                    <div class="small-12 medium-6 large-6 columns">
+                    <label>
+                    Asset Content Name
+
+                        <input type="text" placeholder="Enter Asset Content's name" class="required" id = "asset_content_name" name="" />
+                    </label>
+                    </div>
+                    </div>
+                    <div class="row">
+                    <div class="small-12 medium-6 large-6 columns">
+                    <label> Asset Content Description<br/>
+                        <textarea rows="4" cols="2" class="small-12 columns" placeholder="Enter Asset Content's Description" id="asset_content_desc"></textarea>
+                    </label>
+                    </div>
+                    </div>
+                        <div class="row">
                         <button type="button"  class="right orange-button" id="upload_asset" onclick="save_form()">Upload Asset content</button>
+                        </div>
                     </div>
                     <!--<button type="button" class="right orange-button save-asset" onclick="save_asset_cont_data()">Save Asset</button>-->
                     <input type="hidden" name="context_name" value="{{title}}">
                     <input type="hidden" class ="asset_obj_val" name="asset_obj_name" data-asset-obj-val="">
-                </form>
-             </div>
+                
              {% endif %}
         </br><br><br><br><br><br>
         {% for each in asset_content_list.grel_node %}
