--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
@@ -22,7 +22,7 @@
 			<div class=" left title-area">
 			
 				<a href="{% url 'explore_courses' %}" class="secondary-header-tabs  {%if title == 'courses'%} active{% endif %}">
-					Courses
+					Course Unit
 				</a>
 			
 				<a href="{% url 'explore_groups' %}" class="secondary-header-tabs {%if title == 'groups'%} active{% endif %}">
