--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -16,7 +16,7 @@
 {% block body_content %}
 {% get_group_object groupid as group_object %}
 
-{% get_breadcrumb request.path %}
+{% comment %}{% get_breadcrumb request.path %}{% endcomment %}
     <div class="row group_content">
         <div class="small-12 columns">
             <div class="row">
