Create Unit modified to Create Course Unit

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
@@ -35,7 +35,7 @@
 					</a>
 				{% endif %}
 
-				<a class="secondary-header-button right" style="float:right" href="{% url 'unit_create_edit' groupid %}"><i class="fa fa-plus-circle"></i>{% trans " Create Unit" %}</a>
+				<a class="secondary-header-button right" style="float:right" href="{% url 'unit_create_edit' groupid %}"><i class="fa fa-plus-circle"></i>{% trans " Create Course Unit" %}</a>
 
 			</div>
 		</div>
