edit asset impl.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -170,9 +170,13 @@
 
         
             $( ".createAsset" ).click(function() {
+                    var asset_id = $(this).attr('data-asset_id');
                     $.ajax({
                               type: "GET",
                               url: "{% url 'add_asset' group_id %}",
+                              data: {
+                                node_id: asset_id
+                              },
                               datatype: "html",
                               success: function(data) {
                                 $('#addAsset').foundation('reveal', 'open');
