--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -3,36 +3,25 @@
 {% check_is_gstaff group_id request.user as is_gstaff %}
 
     <div class="row overlay-head">
-
-        {% if asset_obj.name %}
-
-        {% else %}
-
-        <a class="right close-reveal-modal reveal-modal-overlay" aria-label="Close">&#215;</a>
+        {% if edit or not asset_obj.name %}
+            <a class="right close-reveal-modal reveal-modal-overlay" aria-label="Close">&#215;</a>
         {% endif %}
         <div class="small-12 colums" >
-        {% if asset_obj.name %}
-            <h3 class="left">&nbsp;&nbsp;{{asset_obj.name}}</h3>
-
-        {% else %}
-            <h3 class="left overlay-title">&nbsp; Add a new asset</h3>
-            <button type="button" class="right orange-button save-asset">Save Asset</button>
-        {% endif %}
-
-            {% if asset_obj.name %}
-
+            {% if not edit and asset_obj.name %}
+                <h3 class="left">&nbsp;&nbsp;{{asset_obj.name}}</h3>
+                <a class="fi-pencil right createAsset" data-asset_id='{{asset_obj.pk}}'>Edit</a>
             {% else %}
-            <!--<button type="button" class="right orange-button save-asset">Save Asset</button>-->
+                <h3 class="left overlay-title">&nbsp;{% if not asset_obj %} Add a new {% else %} Edit {% endif %} asset</h3>
+                <button type="button" class="right orange-button save-asset" data-asset_id='{{asset_obj.pk}}'>Save Asset</button>
             {% endif %}
-
         </div>
     </div>
     <div class="row">
         <div class="small-12 medium-6 large-6 columns">
             <label>
-                {% if not asset_obj %}
+                {% if edit or not asset_obj %}
                    Asset name 
-                   <input type="text" placeholder="" class="required" id = "asset-name" name="asset_name" />
+                   <input type="text" placeholder="" class="required" id = "asset-name" name="asset_name" value="{% if asset_obj %} {{asset_obj.name}}{% endif %}"/>
                 {% endif %}
 
             </label>
@@ -41,11 +30,11 @@
     <div class="row">
         <div class="small-12 medium-6 large-6 columns">
             <label> 
-                {% if asset_obj %}
+                {% if not edit and asset_obj %}
                    <i><p style="color: gray">{{asset_obj.content}} </p><i>
                 {% else %}
                     Asset description
-                    <textarea rows="4" cols="2" class="large-6 columns" placeholder="Enter Description" id="asset-descid"></textarea>
+                    <textarea rows="4" cols="2" class="large-6 columns" placeholder="Enter Description" id="asset-descid">{% if asset_obj %} {{asset_obj.content}}{% endif %}</textarea>
                 {% endif %}
             </label>
         </div>
@@ -53,7 +42,7 @@
     {% comment %}
     <div class="row">
         <div class="small-12 medium-6 large-6 columns">
-            {% if asset_obj %}
+            {% if not edit and asset_obj %}
                 <!--<i><p style="color: #2e3f51">{{asset_obj.content}} </p><i>-->
             
             {% else %}
@@ -80,7 +69,7 @@
         </div>
     </div>
     {% endcomment %}
-   
+   {% if not edit %}
     <div class="asset-content-area"{% if not asset_obj %} style="display:none"{% endif %}>
        <!-- <h3>Add esources for this asset</h3>-->
         <div class="row">
@@ -133,7 +122,6 @@
         {%  endif %}
         </div>
     </div>
-
     <div class="row asset-comments-section">
       <div class="columns small-10 " id="view-discussion">
             <!-- discussion content area -->
@@ -147,6 +135,7 @@
             <!-- END of discussion content area -->
       </div>
     </div>
+    {% endif %}
 
     
 <script type="text/javascript">
@@ -155,7 +144,7 @@
         $(".name-desc-asset-cont-area").css('display','block')
     });
   
-    $('.save-asset').attr('disabled',true); 
+    // $('.save-asset').attr('disabled',true); 
     $('#upload_asset').attr('disabled',true); 
     
     $('#asset_content_name').keyup(function(){
@@ -165,46 +154,58 @@
             $('#upload_asset').attr('disabled',true);
     })
 
-    $('#asset-name').keyup(function(){
-        if($(this).val().length !=0 && $('#asset-descid').val().length !=0)
-            $('.save-asset').attr('disabled', false);            
-        else
-            $('.save-asset').attr('disabled',true);
-    })
+    // $('#asset-name').keyup(function(){
+    //     if($(this).val().length !=0 && $('#asset-descid').val().length !=0)
+    //         $('.save-asset').attr('disabled', false);            
+    //     else
+    //         $('.save-asset').attr('disabled',true);
+    // })
 
-    $('#asset-descid').keyup(function(){
-        if($(this).val().length !=0 &&  $('#asset-name').val().length !=0)
-            $('.save-asset').attr('disabled', false);            
-        else
-            $('.save-asset').attr('disabled',true);
-    })
-    $( ".save-asset" ).click(function() {
+    // $('#asset-descid').keyup(function(){
+    //     if($(this).val().length !=0 &&  $('#asset-name').val().length !=0)
+    //         $('.save-asset').attr('disabled', false);            
+    //     else
+    //         $('.save-asset').attr('disabled',true);
+    // })
+    $( ".save-asset" ).click(function(event) {
         asset_name = $("#asset-name").val();
         asset_description = $("#asset-descid").val();
+        var asset_id = $(this).attr('data-asset_id');
+        if (asset_name && asset_description){
+            // asset_objective =  $('#asset_objectivesid').find(':selected').attr('value');
+            $.ajax({
+                  type: "POST",
+                  data:{ 
+                        'csrfmiddlewaretoken': "{{csrf_token}}",
+                        "asset_name":asset_name,
+                        "asset_description":asset_description,
+                        "node_id": asset_id
+                        // "asset_objective":asset_objective
+                    },
+                  url: "{% url 'create_edit_asset' group_id %}",
+                  datatype: "html",
+                  success: function(data) {
+                    // $('#addAsset').html(data);
+                    // $('#addAsset').foundation('reveal', 'open');
+                    $('.asset-content-area').css('display', 'block')
+                    alert("Asset Added Successfully")
+                    $('.save-asset').css('display', 'none')
+                    $('.asset_obj_val').attr('data-asset-obj-val',data);
+                }
+            });
 
-        // asset_objective =  $('#asset_objectivesid').find(':selected').attr('value');
-        $.ajax({
-              type: "POST",
-              data:{ 
-                    'csrfmiddlewaretoken': "{{csrf_token}}",
-                    "asset_name":asset_name,
-                    "asset_description":asset_description,
-                    // "asset_objective":asset_objective
-                },
-              url: "{% url 'create_edit_asset' group_id %}",
-              datatype: "html",
-              success: function(data) {
-                // $('#addAsset').html(data);
-                // $('#addAsset').foundation('reveal', 'open');
-                $('.asset-content-area').css('display', 'block')
-                alert("Asset Added Successfully")
-                $('.save-asset').css('display', 'none')
-                $('.asset_obj_val').attr('data-asset-obj-val',data);
-            }
-
-      });
-
+        }
+        else{
+            console.log(asset_name)
+            console.log(asset_description)
+            event.preventDefault() 
+        }
     });
+
+    $(document).on('closed', '[data-reveal]', function () {
+        location.reload()
+    })
+
 </script>
 <script type="text/javascript">
   var form = document.getElementById('docPost');
