Added missing fn

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/html_editor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/html_editor.html
@@ -12,7 +12,7 @@
 <style type="text/css">
     #group_imgs_on_modal{
         overflow-y: auto;
-        height:600px;        
+        height:600px;
     }
 </style>
 
@@ -51,4 +51,10 @@
         //                                         { name: 'tools', items : [ 'Maximize','-','About' ,'addImage'] }
         //                                     ]
     });
+
+    function setCurrNodeEdit(oid)
+    {
+        // document.getElementById("currently-edited-row").setAttribute("data-edited-row-id", oid);
+    }
+
 </script>
