--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -257,9 +257,9 @@
                                     <a href="#" data-reveal-id="add-activity-modal" class="add_activity">Create new</a>
                                 </li>
                                 <li>
-                            <!--
-                                    <a href="#">Create from existing template</a>
+                                    <a href="#" data-reveal-id="choose-template">Create from existing template</a>
                                 </li>
+                            <!--
                                 <li>
                                     <a href="#">Select from Pages</a>
                                 </li>
@@ -279,6 +279,15 @@
       <button type="button" class="button-hollow-grey save-activity" data-lesson-id="">
         Save Activity
       </button>
+      <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+
+    </div>
+<div id="choose-template" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+      <h3>Choose Templates</h3>
+      <!-- <input type="text" id="activity-name">
+      <button type="button" class="button-hollow-grey save-activity" data-lesson-id="">
+        Save Activity
+      </button> -->
       <a class="close-reveal-modal" aria-label="Close">&#215;</a>
     </div>
 
