--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -67,7 +67,7 @@
                             <a href="{% url 'asset_list' group_id %}" {% if title == 'asset_list' or title == 'asset_detail' or title == 'asset_content_detail'%}class="selected"{% endif %}>Assets</a>
                         </li>
                         <li >
-                            <a href="https://103.36.84.149/oat/#/" {% if title == 'Assessments' %}class="selected"{% endif %}>Assessments</a>
+                            <a href="https://103.36.84.149/oat/#/" target="_blank" {% if title == 'Assessments' %}class="selected"{% endif %}>Assessments</a>
                             <!-- <a href="#group_blog">Blog</a> -->
                         </li>
                         <li >
