adding other jhapps

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -35,9 +35,7 @@
                     {% else %}
                         Asset description
                 </label>
-                        <textarea rows="4" cols="2" class="small-12 columns" placeholder="Enter Description" id="asset-descid" value=''>
-                            {% if asset_obj %} {{asset_obj.content}}{% endif %}
-                        </textarea>
+                        <textarea rows="4" cols="2" class="small-12 columns" placeholder="Enter Description" id="asset-descid" value=''>{% if asset_obj %} {{asset_obj.content}}{% endif %}</textarea>
                     {% endif %}
                 
             </div>
