--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -46,7 +46,15 @@
         <a class="view-page" data-page-id="{{each.pk}}" data-node-name="{{each.name}}">
             <div class="small-12 medium-6 large-3 columns">
                 <div class="asset_tile">
-                    <div class="asset_preview"></div>
+                    <div class="asset_preview">
+                        {% if each.if_file.mid.relurl and 'video' not in each.if_file.mime_type %}
+                        <img src="{{MEDIA_URL}}{{each.if_file.mid.relurl}}">
+                        {% elif 'video' not in each.if_file.mime_type and each.if_file.thumbnail.relurl %}
+                        <img src="{{MEDIA_URL}}{{each.if_file.thumbnail.relurl}}">
+                        {% else %}
+                        <img src="/static/ndf/images/asset_thumbnail.png">
+                        {% endif %}
+                    </div>
                         <div class="asset_text">
                             <div class="asset_title">{{each.name}}</div>
                             <div class="asset_desc">{{each.content|truncatechars:20}}</div>
